Fixed a bug where dimension and metric fields where properly aligned for RTL languages

--- a/analytics/resources/css/AnalyticsExplorer.less
+++ b/analytics/resources/css/AnalyticsExplorer.less
@@ -132,6 +132,10 @@
         right: auto;
         text-align: left;
     }
+
+    .field {
+        text-align: right;
+    }
 }
 
 
